<resources>
    <string name="app_name">FitnessDIY</string>
    <string name="logo_sub">Do It Yourself</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="choice_command">Choose your level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="history">History</string>
    <string name="plank">Plank</string>
    <string name="exercise">Start Exercise</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_jogging">Map</string>
    <string name="start">START</string>
    <string name="plank_video">Plank Video</string>
    <string name="pushup">Push Up</string>
    <string name="motivation_pushup">Push Up Challenge : Before and After</string>
    <string name="pushup_demo">How to Push Up Properly</string>
    <string name="pushup_video">Need Insight?</string>
    <string name="situp">Sit Up</string>
    <string name="motivation_situp">Sit Up Challenge : Before and After</string>
    <string name="situp_demo">How to do sit up properly</string>
    <string name="jogging_history">Jogging History</string>
    <string name="plank_history">Plank History</string>
    <string name="pushup_history">Push Up History</string>
    <string name="situp_history">Sit Up History</string>
    <string name="sign_in">Sign In</string>
    <string name="register">REGISTER</string>
    <string name="situp_video">Need Insight?</string>
    <string name="plank_demo">How to Plank</string>
    <string name="motivation_plank">Benefit of Plank</string>
    <string name="register_req">Don\'t Have Account?</string>
    <string name="kosong">...</string>
    <string name="start_run">Starting Point</string>
    <string name="end_run">End Point</string>
</resources>
