<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.leo.fitnessdiy.LoginActivity"
    android:layout_margin="16dp"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="8dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:onClick="doLogin"
            android:background="#2eff00"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14dp"
            android:layout_margin="8dp"
            android:background="#2eff00"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:onClick="toRegister"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
