<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leo.fitnessdiy.LevelActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Your Level"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:textSize="40sp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/layout_bg"
        android:minWidth="200dp">

        <RadioButton
            android:id="@+id/level_begineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectLevel"
            android:textSize="22sp"
            android:text="@string/beginner" />

        <RadioButton
            android:id="@+id/level_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectLevel"
            android:textSize="22sp"
            android:text="@string/intermediate" />

        <RadioButton
            android:id="@+id/level_advanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectLevel"
            android:textSize="22sp"
            android:text="@string/advanced" />
    </RadioGroup>


</LinearLayout>
