<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.leo.fitnessdiy.PushupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/pushup" />
    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:onClick="countDownPlank"-->
        <!--android:text="start" />-->

    <!--<TextView-->
        <!--android:id="@+id/count_timer"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textSize="32sp"-->
        <!--android:text="2 : 00" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/pushup_video" />



    <!--<ScrollView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openVideo"
        android:orientation="horizontal"
        android:tag="https://www.youtube.com/watch?v=IODxDxX7oi4">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="158dp"
            android:src="@drawable/pushup_video1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pushup_demo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:tag="https://www.youtube.com/watch?v=lHjj5vmzpy0"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openVideo"
        android:layout_margin="4dp">

        <ImageView
            android:layout_width="258dp"
            android:layout_height="148dp"
            android:src="@drawable/pushup_video2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivation_pushup"/>
    </LinearLayout>

    <!--</ScrollView>-->


</LinearLayout>
