<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leo.fitnessdiy.SitupActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background ="@drawable/layout_bg" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/situp_icon"/>

            <TextView
                android:layout_width="125dp"
                android:layout_height="match_parent"
                android:text="Sit Up"
                android:textColor="@color/headingColor"
                android:textSize="45dp" />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/situp_icon"
                android:scaleX="-1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/sitUpTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="Do Sit Up 30 times"
            android:textColor="@color/bodyTextColor"
            android:textSize="18dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textColor="@color/headingColor"
            android:onClick="taskBegin"
            android:id="@+id/start_situp_button"
            android:text="Start" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textColor="@color/headingColor"
            android:id="@+id/finish_situp_button"
            android:onClick="taskComplete"
            android:visibility="gone"
            android:text="Done!" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/headingColor"
            android:text="@string/situp_video" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openVideo"
            android:orientation="horizontal"
            android:tag="https://www.youtube.com/watch?v=IODxDxX7oi4">

            <ImageView
                android:layout_width="207dp"
                android:layout_height="113dp"
                android:src="@drawable/situp_video_1" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/situp_demo"
                android:textColor="@color/bodyTextColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:tag="https://www.youtube.com/watch?v=lHjj5vmzpy0"
            android:clickable="true"
            android:focusable="true"
            android:onClick="openVideo"
            android:layout_margin="4dp">

            <ImageView
                android:layout_width="207dp"
                android:layout_height="113dp"
                android:src="@drawable/situp_video_2" />

            <TextView
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:text="@string/motivation_situp"
                android:textColor="@color/bodyTextColor" />
        </LinearLayout>

    </LinearLayout>
    <!--</ScrollView>-->


</ScrollView>
