<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.leo.fitnessdiy.HIstoryActivity">
        <android.support.v7.widget.CardView
            android:id="@+id/jogging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/layout_jogging"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/jogging_icon"
                    android:layout_width="48dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/jogging_icon"/>

                <TextView
                    android:id="@+id/jogging_title"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/jogging_icon"
                    android:text="@string/jogging_history" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/down_button"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/plank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jogging"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/layout_plank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/plank_icon"
                    android:layout_width="48dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/plank_icon"/>

                <TextView
                    android:id="@+id/plank_title"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/plank_icon"
                    android:layout_toRightOf="@id/plank_icon"
                    android:text="@string/plank_history" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/down_button"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/pushup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plank"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/layout_pushup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/pushup_icon"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:contentDescription="TODO"
                android:src="@drawable/pushup_icon"/>

            <TextView
                android:id="@+id/pushup_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/pushup_icon"
                android:layout_toRightOf="@id/pushup_icon"
                android:text="@string/pushup_history" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/down_button"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/situp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pushup"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/situp_plank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/situp_icon"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginRight="8dp"
                android:contentDescription="TODO"
                android:src="@drawable/situp_icon"/>

            <TextView
                android:id="@+id/situp_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/situp_icon"
                android:layout_toRightOf="@id/situp_icon"
                android:text="@string/situp_history" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/down_button"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/situp"/>

    <ProgressBar
        android:id="@+id/proCollage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        />
</RelativeLayout>
